--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,7 +15,7 @@
 -->
 
 <resources>
-    <string name="app_name">HMonitor By PRAVAHYA</string>
+    <string name="app_name">HMonitor BY PRAVAHYA</string>
 
     <!--  BluetoothChat -->
     <string name="send">Send</string>
