added string value to textview

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,18 +15,18 @@
 -->
 
 <resources>
-    <string name="app_name">HMonitor BY PRAVAHYA</string>
+    <string name="app_name">HMonitor By PRAVAHYA</string>
 
     <!--  BluetoothChat -->
     <string name="send">Send</string>
     <string name="not_connected">You are not connected to a device</string>
     <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
-    <string name="title_connecting">connecting...</string>
+    <string name="title_connecting">connecting&#8230;</string>
     <string name="title_connected_to">connected: </string>
     <string name="title_not_connected">not connected</string>
 
     <!--  DeviceListActivity -->
-    <string name="scanning">scanning for devices...</string>
+    <string name="scanning">scanning for devices&#8230;</string>
     <string name="select_device">select a device to connect</string>
     <string name="none_paired">No devices have been paired</string>
     <string name="none_found">No devices found</string>
@@ -37,4 +37,14 @@
     <!-- Options Menu -->
     <string name="connect">Connect a device</string>
     <string name="discoverable">Make discoverable</string>
+    <string name="OptMenuAdd">Add Patient</string>
+    <string name="OptMenuBlue">Monitor</string>
+    <string name="patient_id">Patient ID:</string>
+    <string name="patient_name">Patient Name:</string>
+    <string name="patient_bgroup">Blood Group:</string>
+    <string name="button_add">Add</string>
+    <string name="initial_text">Hey!!!! Welcome</string>
+    <string name="patientprompt">Select Patient</string>
+    <string name="hquote">Heart Pluse:       </string>
+    <string name="hvalue"/>
 </resources>
